--- a/application/app/views/encounters/outcome.rhtml
+++ b/application/app/views/encounters/outcome.rhtml
@@ -44,13 +44,22 @@
   <%= hidden_field_tag("observations[][patient_id]",          @patient.id) %>
   <%= hidden_field_tag("observations[][obs_datetime]",        DateTime.now()) %>
 
-  <%= touch_text_field_tag "REASON FOR REFERRAL", @patient, nil,
+  <%#= touch_text_field_tag "REASON FOR REFERRAL", @patient, nil,
     {:id => "referral_reason",
     :ajaxURL => '/encounters/referral_reasons?search_string=',
     :optional => true,
     :allowFreeText => true,
     :condition    => "$('select_outcome').value != 'GIVEN ADVICE'",
     :helpText => 'Referral reason'} %>
+
+  <%= touch_select_tag "REASON FOR REFERRAL", @patient, options_for_select(@select_options['referral_reasons'].sort),
+          {:id => 'referral_reason',
+           :optional => true,
+           :multiple => false,
+           :helpText => "Referral reason",
+           #:validationCode => "getRemindersContent() == 'false'",
+           #:validationMessage => "Patient has already enrolled in #{@tips_and_reminders} tips and reminders content",
+           :condition    => "$('select_outcome').value != 'GIVEN ADVICE'" } %>
 
   <%unless @encounter_id.nil?%>
     <%= hidden_field_tag("encounter_id",  @encounter_id) %>
