fixed so that the danger warning signs should be shown following the protocols

--- a/application/app/views/encounters/child_symptoms.rhtml
+++ b/application/app/views/encounters/child_symptoms.rhtml
@@ -97,7 +97,7 @@
       }
     }
 
-    if (display = "<div><br />"){
+    if (display == "<div><br />"){
       display += "<span class='title' style='font-size:22px;'>No danger signs </span><br />";
     }
 
