--- a/application/app/views/encounters/recent_tip_and_reminder_program.rhtml
+++ b/application/app/views/encounters/recent_tip_and_reminder_program.rhtml
@@ -1,10 +1,10 @@
 <style>
   .tt_controls_tips_and_reminders_phone_number #num , #plus, #apostrophe, #star,
-     #char, #abc, #date, #slash, #minus, #comma, #percent, #decimal, #Unknown { display:none; }
+     #char, #abc, #date, #slash, #minus, #comma, #percent, #decimal { display:none; }
 </style>
 <script>
   var tt_cancel_destination = "/patients/show/<%= @patient.id %>"
-
+  
   function getRemindersContent(){
     var options = $('content_type').options;
     var symptoms = 0;
@@ -25,6 +25,16 @@
     } else {
       return 'false';
     }
+  }
+
+  function checkPhoneType() {
+    if ($("phone_type").value == "COMMUNITY PHONE") {
+      __$("tips_and_reminders_phone_number").value = 'Unknown';
+    }
+    else {
+      __$("tips_and_reminders_phone_number").value = '';
+    }
+    
   }
 
   function new_relationship() {
@@ -115,7 +125,7 @@
     <% options = {
       :id           => "phone_type",
       :helptext     => "Select type of phone",
-      :tt_onUnLoad  => "$('phone_type_value_coded_or_text').value = $('phone_type').value",
+      :tt_onUnLoad  => "$('phone_type_value_coded_or_text').value = $('phone_type').value; checkPhoneType();",
       :condition    => "$('enrol_for_tips_and_reminders').value == 'Yes'"
 	  } %>
 
@@ -124,10 +134,11 @@
     <%= hidden_field_tag("observations[][value_coded_or_text]", "", {:id => 'phone_type_value_coded_or_text'}) %>
     <%= hidden_field_tag("observations[][patient_id]",          @patient.id) %>
     <%= hidden_field_tag("observations[][obs_datetime]",        DateTime.now()) %>
-
+        
     <% options = {
        :id          => "tips_and_reminders_phone_number",
        :tt_onUnLoad => "$('phone_number_value_coded_or_text').value = $('tips_and_reminders_phone_number').value",
+       :tt_onLoad   => "checkPhoneType()",
        :helpText    => "Enter Phone Number",
        :field_type => 'number',
        :validationRule => "^0\\d{7}$|Unknown|Not Available|N\/A|^0\\d{9}$",
@@ -136,7 +147,7 @@
        :condition    => "$('enrol_for_tips_and_reminders').value == 'Yes'"
        } %>
 
-    <%= text_field_tag "phone_number",  @tips_answer[:telephone_number], options%>
+    <%= text_field_tag "phone_number", @tips_answer[:telephone_number] , options%>
     <%= hidden_field_tag("observations[][concept_name]",        "PHONE NUMBER", options) %>
     <%= hidden_field_tag("observations[][value_coded_or_text]", "", {:id => 'phone_number_value_coded_or_text'}) %>
     <%= hidden_field_tag("observations[][patient_id]",          @patient.id) %>
