Fixed a typo which caused phone numbers not to show

--- a/application/app/views/report/patient_referral_report.html.erb
+++ b/application/app/views/report/patient_referral_report.html.erb
@@ -56,7 +56,7 @@
                   <%=  info[:name]%>
                 </td>
                 <td class="cellleft cellbottom main-table-cell">
-                  <%=  info[:number][:cell_phone_number_] %>
+                  <%=  info[:number][:cell_phone_number] %>
                 </td>
                 <td class="cellleft cellbottom cellright main-table-cell">
                   <%=  info[:visit_summary] %>
