Updated the required changes as requested by DH

--- a/application/app/views/encounters/recent_tip_and_reminder_program.rhtml
+++ b/application/app/views/encounters/recent_tip_and_reminder_program.rhtml
@@ -32,7 +32,7 @@
       __$("tips_and_reminders_phone_number").value = 'Unknown';
     }
     else {
-      __$("tips_and_reminders_phone_number").value = '';
+      __$("tips_and_reminders_phone_number").value ='<%@tips_answer[:telephone_number]%>';
     }
     
   }
@@ -125,7 +125,7 @@
     <% options = {
       :id           => "phone_type",
       :helptext     => "Select type of phone",
-      :tt_onUnLoad  => "$('phone_type_value_coded_or_text').value = $('phone_type').value; checkPhoneType();",
+      :tt_onUnLoad  => "$('phone_type_value_coded_or_text').value = $('phone_type').value;",
       :condition    => "$('enrol_for_tips_and_reminders').value == 'Yes'"
 	  } %>
 
@@ -138,7 +138,7 @@
     <% options = {
        :id          => "tips_and_reminders_phone_number",
        :tt_onUnLoad => "$('phone_number_value_coded_or_text').value = $('tips_and_reminders_phone_number').value",
-       :tt_onLoad   => "checkPhoneType()",
+       :tt_onLoad   => "checkPhoneType();",
        :helpText    => "Enter Phone Number",
        :field_type => 'number',
        :validationRule => "^0\\d{7}$|Unknown|Not Available|N\/A|^0\\d{9}$",
