ensured that this showed the right health task

--- a/application/app/views/report/patient_health_issues_report.html.erb
+++ b/application/app/views/report/patient_health_issues_report.html.erb
@@ -61,7 +61,7 @@
           </tr>
           <tr>
             <td  class="cellleft cellbottom main-table-cell">
-                Total Callers with symptoms
+                Total Callers with <%= @health_task.humanize.titleize %>
             </td>
             <td  class="cellleft cellbottom main-table-cell">
               <%= data[:total_number_of_calls] %>
