--- a/application/app/views/people/new.rhtml
+++ b/application/app/views/people/new.rhtml
@@ -48,6 +48,23 @@
     }
   }
 
+
+  function validateAge(){
+    var today = new Date();
+    var dob = new Date($('person_birth_year').value,$('person_birth_month').value -1,$('person_birth_day').value);
+    
+    if (dob > today) {
+      alert("I am here")
+      return false
+    }
+    else if (($('gender').value == 'M') && ((today.getFullYear()-dob.getFullYear()) > 6)) {
+      return false
+    }
+    else {
+      return true
+    }
+  }
+  
   function validPhoneNum(type){
     text = document.getElementById('tt_page_' + type).getElementsByTagName("input")[0]
     if (text.value == 'Unknown')
@@ -84,9 +101,13 @@
 
   <%= text_field_tag "person[birth_details][age_estimate]", nil, {:id=> 'person_age_estimate', :helpText => 'Age Estimate', :absoluteMin => 1, :absoluteMax => age_limit, :field_type => 'number', :condition => '$("person_birth_year").value == "Unknown"', :tt_pageStyleClass => "Numeric NumbersOnly"} %>
 
-  <%= text_field_tag "person[birth_details][birth_day]",  nil, {:id=> 'person_birth_day', :field_type => 'number', :helpText => 'Birth Day', :condition => '($("person_birth_year").value != "Unknown") && ($("person_birth_month").value != "Unknown")', :tt_onLoad => "getDayOfMonthPicker($('person_birth_year').value, $('person_birth_month').value)"} %>
+  <%= text_field_tag "person[birth_details][birth_day]",  nil, {:id=> 'person_birth_day', :field_type => 'number', :helpText => 'Birth Day', :condition => '($("person_birth_year").value != "Unknown") && ($("person_birth_month").value != "Unknown")',
+      :tt_onLoad => "getDayOfMonthPicker($('person_birth_year').value, $('person_birth_month').value)",
+      :validationJS => "validateAge();",
+      :validationMessage => "Not a valid Date",
+      } %>
 
-  <%= text_field_tag "person[addresses][address2]", params[:address2], {:id => 'address2', :field_type => 'alpha', :helpText => 'Home Village', :ajaxURL => '/person_addresses/address2?search_string=', :allowFreeText => true, :condition => '$("address2").value == "" || skipped[tstCurrentPage] == 1', :tt_onLoad => 'seen(tstCurrentPage);' } if ask_home_village %>
+  <%= text_field_tag "person[addresses][address2]", params[:address2], {:id => 'address2', :field_type => 'alpha', :helpText => 'Home Village', :ajaxURL => '/person_addresses/address2?search_string=', :allowFreeText => true, :tt_onLoad => 'seen(tstCurrentPage);' } if ask_home_village %>
   
   <%= text_field_tag "person[addresses][city_village]",  params[:city_village], {:field_type => 'alpha', :helpText => 'Current Village (residence)', :ajaxURL => '/person_addresses/village?search_string=', :allowFreeText => true }%>
 
