--- a/application/app/views/report/call_day_distribution.html.erb
+++ b/application/app/views/report/call_day_distribution.html.erb
@@ -189,43 +189,43 @@
               <%=  total_monday %>
             </td>
             <td class="cellleft cellbottom main-table-cell" style="font-weight: bold;">
-              <%= (total_monday.to_f / total_calls.to_f * 100).round(1) %>
+              <%= (total_monday.to_f / total_calls.to_f * 100).round(1) rescue 0 %>
             </td>
             <td class="cellleft cellbottom main-table-cell" style="font-weight: bold;">
               <%=  total_tuesday %>
             </td>
             <td class="cellleft cellbottom main-table-cell" style="font-weight: bold;">
-              <%=  (total_tuesday.to_f / total_calls.to_f * 100).round(1) %>
+              <%=  (total_tuesday.to_f / total_calls.to_f * 100).round(1)  rescue 0 %>
             </td>
             <td class="cellleft cellbottom main-table-cell" style="font-weight: bold;">
               <%=  total_wednesday %>
             </td>
             <td class="cellleft cellbottom main-table-cell" style="font-weight: bold;">
-              <%=  (total_wednesday.to_f / total_calls.to_f * 100).round(1) %>
+              <%=  (total_wednesday.to_f / total_calls.to_f * 100).round(1)  rescue 0 %>
             </td>
             <td class="cellleft cellbottom main-table-cell" style="font-weight: bold;">
               <%= total_thursday %>
             </td>
             <td class="cellleft cellbottom cellright main-table-cell" style="font-weight: bold;">
-              <%=  (total_thursday.to_f / total_calls.to_f * 100).round(1) %>
+              <%=  (total_thursday.to_f / total_calls.to_f * 100).round(1)  rescue 0 %>
             </td>
             <td class="cellleft cellbottom main-table-cell" style="font-weight: bold;">
               <%=  total_friday %>
             </td>
             <td class="cellleft cellbottom main-table-cell" style="font-weight: bold;">
-              <%=  (total_friday.to_f / total_calls.to_f * 100).round(1) %>
+              <%=  (total_friday.to_f / total_calls.to_f * 100).round(1)  rescue 0 %>
             </td>
             <td class="cellleft cellbottom main-table-cell" style="font-weight: bold;">
               <%=  total_saturday %>
             </td>
             <td class="cellleft cellbottom main-table-cell" style="font-weight: bold;">
-              <%=  (total_saturday.to_f / total_calls.to_f * 100).round(1) %>
+              <%=  (total_saturday.to_f / total_calls.to_f * 100).round(1) rescue 0  %>
             </td>
             <td class="cellleft cellbottom main-table-cell" style="font-weight: bold;">
               <%= total_sunday %>
             </td>
             <td class="cellleft cellbottom cellright main-table-cell" style="font-weight: bold;">
-              <%=  (total_sunday.to_f / total_calls.to_f * 100).round(1) %>
+              <%=  (total_sunday.to_f / total_calls.to_f * 100).round(1) rescue 0  %>
             </td>
           </tr>
       </table>
