--- a/application/app/views/report/patient_health_issues_report.html.erb
+++ b/application/app/views/report/patient_health_issues_report.html.erb
@@ -10,9 +10,9 @@
       <%params[:format] = 'pdf'%>
       <%select_report_criteria = '/report/select?report_type=' +@report_type +'&query=' + @query%>
 
-      <button id="back_button" class="button blue" onclick="window.location = '<%#=report_path(params)%>'"><span>PDF</span></button>
+      <!--button id="back_button" class="button blue" onclick="window.location = '<%#=report_path(params)%>'"><span>PDF</span></button -->
       <!-- button id="regenerate_button" class="button blue" onclick="document.getElementById('frmMain').submit();"><span>Regenerate</span></button -->
-      <button id="print_button" class="button blue" onclick="window.print()"><span>Print</span></button>
+      <!-- button id="print_button" class="button blue" onclick="window.print()"><span>Print</span></button -->
       <button id="finish_button" class="button green" onclick="window.location = '/clinic'"><span>Finish</span></button>
       <button id="back_button" class="button red" onclick="window.location = '<%=select_report_criteria%>'"><span>Back</span></button>
     </div>
