changed the list of female health symptoms

--- a/application/app/views/report/patient_health_issues_report.html.erb
+++ b/application/app/views/report/patient_health_issues_report.html.erb
@@ -55,7 +55,7 @@
             <td  class="cellleft cellbottom main-table-cell">
               <%= data[:total_calls] %>
             </td>
-            <td  class="cellleft cellbottom main-table-cell"> 
+            <td  class="cellleft cellbottom cellright main-table-cell"> 
               na
             </td>
           </tr>
@@ -66,7 +66,7 @@
             <td  class="cellleft cellbottom main-table-cell">
               <%= data[:total_number_of_calls] %>
             </td>
-            <td  class="cellleft cellbottom main-table-cell">
+            <td  class="cellleft cellbottom cellright main-table-cell">
               na
             </td>
           </tr>
@@ -77,7 +77,7 @@
             <td  class="cellleft cellbottom main-table-cell">
               <%= data[:total_number_of_calls_for_period]%>
             </td>
-            <td  class="cellleft cellbottom main-table-cell">
+            <td  class="cellleft cellbottom cellright main-table-cell">
               na
             </td>
           </tr>
