--- a/application/app/views/encounters/child_symptoms.rhtml
+++ b/application/app/views/encounters/child_symptoms.rhtml
@@ -243,7 +243,7 @@
   <script type="text/javascript" language="javascript">
     child_health_values = <%= to_jsarray(@child_health_info) %> ;
   </script>
-  <%#= select_tag "child_health_info",options_for_select(@child_health_info, @encounter_answers[:health_info]),
+  <%= select_tag "child_health_info",options_for_select(@child_health_info, @encounter_answers[:health_info]),
     {:id          => "child_health_info_id",
     :multiple    => true,
     :optional    => true,
