changed convulsions to convulsions sign

--- a/application/app/views/encounters/child_symptoms.rhtml
+++ b/application/app/views/encounters/child_symptoms.rhtml
@@ -164,7 +164,7 @@
 
   <%= touch_hidden_tag "COUGH FOR 21 DAYS OR MORE", @patient, "NO", :id => "cough_21_days" %>
 
-  <%= touch_yes_no_tag "CONVULSIONS", @patient,  nil,
+  <%= touch_yes_no_tag "CONVULSIONS SIGN", @patient,  nil,
     { :id => "convulsions",
     :helpText => "Is the child having convulsions, or has recently had convulsions?" } %>
 
