Implementing dropped call functionality when creating a patient

--- a/application/app/views/clinic/home.html.erb
+++ b/application/app/views/clinic/home.html.erb
@@ -17,7 +17,7 @@
 
   <select id="links">
     <% if session[:house_keeping_mode] == false  %>
-      <option value="" ttSize="190px">Irrelevant Call</option>
+      <option value="" ttSize="190px">Cancel Call</option>
     <%else%>
       <option value="/clinic/end_housekeeping_mode" ttSize="190px">Cancel</option>
     <%end%>
